More work on Space Loops section + overflow problem fix

--- a/src/stylesheets/components/_project-green.scss
+++ b/src/stylesheets/components/_project-green.scss
@@ -34,12 +34,14 @@ $project-green-background: #1FB74A;
 
 .pf-project-green-image-row {
   display: flex;
+
   @media only screen and (max-width: $sm) {
-    overflow-x: auto;
     overflow-y: hidden;
+    overflow-x: auto;
   }
   @media only screen and (min-width: $sm) {
     justify-content: center;
+    overflow: hidden;
   }
 }
 
